//版本
syntax = "proto3";
//作用域
package cs;

// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）
service StreamClient{
  // 客户端流式rpc，在请求的参数前添加stream
  rpc RouteList (stream StreamRequest) returns (SimpleResponse){};
}

// 定义流式请求信息
message StreamRequest{
  //流式请求参数
  string stream_data = 1;
}

// 定义响应信息
message SimpleResponse{
  //响应码
  int32 code = 1;
  //响应值
  string value = 2;
}